--- a/account/templates/account/hr/new_job_post.html
+++ b/account/templates/account/hr/new_job_post.html
@@ -20,28 +20,48 @@
                             <div class="mb-3">
                                 <label for="jobDescription" class="form-label">Job Description</label>
                                 <textarea class="form-control" id="jobDescription" name="job_description"
-                                    placeholder="Enter job description" rows="4" required></textarea>
+                                    placeholder="Enter job description..." rows="4" required></textarea>
                             </div>
                             <div class="mb-3">
                                 <label for="jobLocation" class="form-label">Job Location</label>
                                 <input type="text" class="form-control" id="jobLocation" name="job_location"
                                     placeholder="Enter job location" required>
                             </div>
+
                             <div class="mb-3">
-                                <label for="jobSalary" class="form-label">Job Salary (Per Month)</label>
+                                <label for="jobSalary" class="form-label">Salary Range</label>
                                 <input type="text" class="form-control" id="jobSalary" name="job_salary"
-                                    placeholder="Enter job salary" required>
+                                    placeholder="Enter Salary Range" required>
                             </div>
+
                             <div class="mb-3">
                                 <label for="jobExperience" class="form-label">Job Experience</label>
                                 <input type="text" class="form-control" id="jobExperience" name="job_experience"
                                     placeholder="Enter job experience" required>
                             </div>
                             <div class="mb-3">
-                                <label for="jobQualification" class="form-label">Job Qualification</label>
+                                <label for="jobQualification" class="form-label">Qualification</label>
                                 <input type="text" class="form-control" id="jobQualification" name="job_qualification"
                                     placeholder="Enter job qualification" required>
                             </div>
+                            <div class="mb-3">
+                                <label for="jobCompany" class="form-label">Company</label>
+                                <select class="form-select" id="jobCompany" name="job_company" required>
+                                    <option value="" selected disabled>Select Company</option>
+                                    {% for company in company_list %}
+                                    <option value="{{company.id}}">{{company.company_name}}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            
+                            
+                            <div class="mb-3">
+                                <label for="jobCompanyInfo" class="form-label">Company Information</label>
+                                <textarea class="form-control" id="jobCompanyInfo" rows="4" placeholder="Enter company information..." name="job_company_info" required></textarea>
+                                    
+                            </div>
+
+                            
                             <div class="mb-3">
                                 <label for="jobType" class="form-label">Job Type</label>
                                 <select class="form-select" id="jobType" name="job_type" required>
@@ -52,6 +72,23 @@
                                     <option value="Freelance">Freelance</option>
                                 </select>
                             </div>
+
+
+                            <div class="mb-3">
+                                <label for="jobSecurity" class="form-label">Job Security</label>
+                                <select class="form-select" id="jobSecurity" name="job_security" required>
+                                    <option value="" selected disabled>Select job category</option>
+                                    <option value="Stable">Stable</option>
+                                    <option value="Risky">Risky</option>
+                                </select>
+                            </div>
+
+
+                            <div class="mb-3">
+                                <label for="flexibleWorkArrangements" class="form-label">Flexible Work Arrangements</label>
+                                <input type="checkbox" name="flexible_work_arrangements" id="flexibleWorkArrangements">
+                            </div>
+
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary">Post Job</button>
                             </div>
