--- a/account/templates/account/job_details.html
+++ b/account/templates/account/job_details.html
@@ -34,6 +34,11 @@
             <button type="submit" class="btn btn-primary submit-btn">Search</button>
         </form>
     </div>
+
+    <div class="output-section">
+        <h2>Output Section</h2>
+        <p id="output-message">Output message will appear here</p>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <table class="table">
@@ -58,10 +63,7 @@
             </table>
         </div>
     </div>
-    <div class="output-section">
-        <h2>Output Section</h2>
-        <p id="output-message">Output message will appear here</p>
-    </div>
+    
 </div>
 
 {% endblock content %}
@@ -78,10 +80,11 @@
     searchForm.addEventListener('submit', function (event) {
         event.preventDefault()
         const searchTerm = searchInput.value.toLowerCase();
+        console.log(searchTerm)
         
         // AJAX call to update output section
         $.ajax({
-            type: 'GET',
+            type: 'POST',
             url: '{% url "analyze_hr_query" %}',
             data: {
                 'search_term': searchTerm,
