--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'account/css/style.css' %}">
     <script src="https://kit.fontawesome.com/63028e8eda.js" crossorigin="anonymous"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js" integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <style>
         .navbar-nav.ml-auto {
             margin-right: 0;
@@ -40,7 +42,7 @@
             z-index: 9999;
         }
         #popupMessage.not-active{
-            top: -25%;
+            top: -100%;
         }
 
         #popupMessage.active{
